--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Canvas Image Layering</title>
+    <title>Tarasenko</title>
+    <link rel="icon" href="./img/favicon/family-tree.png" type="image/x-icon">
     <style>
         #canvas-container {
             width: 97vw;
