--- a/index.html
+++ b/index.html
@@ -71,10 +71,12 @@
             font-size: 14px;
             color: white;
             display: none;
+            
         }
-
+        
         .checkbox-label input[type="checkbox"]:checked::after {
             display: block;
+            color: white !important;
         }
     </style>
 </head>
