--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Tarasenko</title>
     <link rel="icon" href="./img/favicon/family-tree.png" type="image/x-icon">
     <style>
+        body {
+            background-color: #f5f5f5;
+        }
         #canvas-container {
             width: 97vw;
             height: 97vh;
@@ -73,7 +76,7 @@
             display: none;
             
         }
-        
+
         .checkbox-label input[type="checkbox"]:checked::after {
             display: block;
             color: white !important;
