--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             background-color: transparent;
             border-radius: 2px;
             transition: background-color 0.2s;
+            color: white !important; 
         }
 
         .checkbox-label input[type="checkbox"]:checked::before {
